# Q3-2017

./: .gitignore  README.md
BursaBVB/: New Open Office Document.odt  README.md
C/AgendaTelefonica/: AgendaTelefonica.cbp  AgendaTelefonica.layout  agenda.txt  main.c
C/AgendaTelefonicaV1/: AgendaTelefonicaV1.cbp  AgendaTelefonicaV1.depend  AgendaTelefonicaV1.layout  agendatelefonica.c  agendatelefonica.h  contacteV1.txt  main.c
C/CAppendingTowFile/: CAppendingTowFile.cbp  main.c
C/CConvertTime/: CConvertTime.cbp  main.c
C/CCrypto/: CCrypto.cbp  CCrypto.depend  CCrypto.layout  main.c  main.txt
C/CCryptography/: CCryptography.cbp  CCryptography.depend  CCryptography.layout  crypto.c  crypto.h  fileoper.c  fileoper.h  main.c  run_main.h  tictactoe.c  tictactoe.h
C/CODE_UPLOAD70416232000/: @PSC_ReadMe_522_3.txt  Jackpot.dev  main.cpp  rsrc.old
C/CSimpleShell/: CSimpleShell.cbp  CSimpleShell.depend  CSimpleShell.layout  main.c
C/SortingArray/: SortingArray.cbp  SortingArray.depend  SortingArray.layout  main.c
C/ncurses_salut/: a.out  main.c  ncurses_salut.cbp  ncurses_salut.depend  ncurses_salut.layout
C/tinyFileDialog/: sddss  sendEmail2.cbp  sendEmail2.depend  sendEmail2.layout
Cpp/GuessNumber/: GuessNumber.cbp  GuessNumber.depend  GuessNumber.layout  main.cpp
Cpp/LambdaTest/: LambdaTest.cbp  main.cpp
Cpp/SimpleChess/: SimpleChess.cbp  SimpleChess.layout  main.cpp
Cpp/VectorTest/: VectorTest.cbp  VectorTest.layout  main.cpp
Documentatie/: anjuta-help.master.ro.mo  anjuta-help.master.ro.po  brasero-help.master.ro.po  gdm-help.master.ro.po  gedit-help.master.ro.po  gnome-calculator-help.master.ro.po  gnome-help.master.ro.po  gnome-system-monitor-help.master.ro.mo  gnome-system-monitor-help.master.ro.po  gnome-tetravex-help.master.ro.po  hitori-help.master.ro.po  totem-help.master.ro.po
Documentatie/Traduse/: gnome-music-help.master.ro.mo  gnome-music-help.master.ro.po
GladeTest/: README.md  gladeTest.glade~  tut  tut.glade  tut.glade~  tut1  tut1.c
JavaCode/: Adaugă articol nou ‹ Magazin Linux — WordPress.html  ShowCodeAsText.java
JavaCode/Adaugă articol nou ‹ Magazin Linux — WordPress_files/: load-scripts_002.js  load-styles.css  post-new.html  wp-tinymce.js
JavaCode/AplicatieSablon/: build.xml
JavaCode/Coursera/: Firstprog.java
JavaCode/EmagLaptop/: build.xml
JavaCode/ExampleCom/: build.xml
JavaCode/Fereastra/: build.xml
JavaCode/FroggerSourceCode/: README.txt
JavaCode/Imobiliare/: README.md  build.xml
JavaCode/JavaBorderLayoutConverter/: build.xml
JavaCode/JavaBoxLayoutConverter/: build.xml
JavaCode/JavaConsoleConverterFtoC/: build.xml
JavaCode/JavaConsoleConvertorCtoF/: build.xml
JavaCode/JavaGuiTempConverter/: build.xml
JavaCode/Salut/: build.xml
JavaCode/TextTable/: MyData.txt  build.xml
JavaCode/TutorialImageViewer/: build.xml
JavaCode/passVault/: build.xml
JavaCode/snow/: build.xml
JavaFx/JavaFXApp01/: build.xml
JavaFx/JavaFXApp9/: build.xml
JavaFx/JavaFXSceneBuilder1.1/: COPYRIGHT.html  JavaFXSceneBuilder1.1
JavaFx/JavaTicTacToeOOP/: build.xml
JavaFx/RssReader01/: build.xml
LearnFrench/: numeralul.otwd  openteacher_3.3_fedora.rpm
Lua/: 01lua.lua  02lua.lua  03lua.lua  economia.txt
Lua/evaluarea_actiunilor/: 04lua.lua  actiuni.lua  brd.lua  el.lua  fp.lua  snn.lua  snp.lua  tlv.lua
Perl/: Tk-Clock-0.40.tgz  connect4.pl  ctk-nettools-0.1.tar.bz2  libros.pl  makeHTML-0.06.tgz  myperl.pl  newperl.pl  perl_file.pl  perlcode.pl  perlcode1.pl  person.pl  pieman-0.07.tgz  tictactoe.pl  timeplan-0.1_alpha2.tar.bz2  word-dig-0.3.2.tgz  xml2html.pl
Perl/01read_press/: perl03.pl  perl_create_files.pl  text.odt  text.txt
Perl/01sourceforge/: googleBookCreat.pl
Perl/abuild-1.1.6/doc/example/general/user/derived/world-peace/autoconf/: Abuild.conf  Abuild.interface  Abuild.mk  autoconf.interface.in  configure.ac
Perl/abuild-1.1.6/misc/compiler-verification/tree/autoconf/: Abuild.conf  Abuild.interface  Abuild.mk  autoconf.interface.in  configure.ac
Perl/abuild-1.1.6/src/autoconf/: Abuild.conf  Abuild.mk  Makefile.bootstrap  autoconf-bootstrap.mk.in  configure.ac
Perl/abuild-1.1.6/src/autoconf/m4/: pthread.m4
Perl/ctk-nettools-0.1/ctk-nettools/: ChangeLog  DBUtils.pm.in  INSTALL  Log.pm.in  Makefile.in  README  Template.pm.in  Time.pm.in  configure.in  nettools.pm.in  test_nettools.pl  variables.mk
Perl/imc-4.3/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  Makefile.inc  NEWS  README  THANKS  Todo  acinclude.m4  configure  configure.in  imc.1  imc.dist  make.cfg.in  make.pl
Perl/imc-4.3/doc/: Makefile.am  Makefile.in  imc.html  imc.ref  imc.txt
Perl/imc-4.3/examples/: Makefile.am  Makefile.in  arc.imc  basic.imc  basic2.imc  basicgif.imc  basicjpg.imc  closedarc.imc  closedarc2.imc  fill.imc  grid200x200.imc  imagealign1.imc  imagealign2.imc  imagerotate.imc  imcmp.pl  origin.imc  piechart.imc  test_script  text.imc  textalign1.imc  textalign2.imc  textrotate.imc  transparent.imc
Perl/imc-4.3/examples/ref/: Makefile.am  Makefile.in  arc.png.ref  basic.png.ref  basic2.png.ref  basicjpg.png.ref  closedarc.png.ref  closedarc2.png.ref  fill.png.ref  grid200x200.png.ref  imagealign2.png.ref  imagerotate.png.ref  origin.png.ref  piechart.png.ref  text.png.ref  textalign1.png.ref  textrotate.png.ref  transparent.png.ref
PerlSDLVim/: .03script.pl.swl  001-base.pl  02script.pl  03script.pl  04script.pl  05script.pl  06script.pl  07script.pl  08script.pl  09script.pl  10script.pl  11script.pl  12script.pl  13script.pl  14script.pl  perlSDLtutorial.odp  print2file.vim
Romania2018-2028/: Romania2018-2028.odt
Ruby/: 01ruby.rb  02ruby.rb  03ruby.rb  05ruby.rb  07ruby.rb
Traduceri/: anjuta.master.ro.po  devhelp.master.ro.mo  devhelp.master.ro.po  glade.master.ro.mo  glade.master.ro.po  gnome-desktop.master.ro.mo  gnome-todo-master-po-ro-835903.merged.mo  gnome-todo-master-po-ro-835903.merged.po  vinagre.master.ro.mo  vinagre.master.ro.po  zenity.master.ro.mo  zenity.master.ro.po
html/: 99html.html~
tutorials/: installyoutube-dl.odp  installyoutube-dl.swf
wget/: index.html
(+4298 files in other folders)
