AC_PREREQ(2.59)
AC_INIT(verify,1.0)
AC_CONFIG_HEADERS([verify-config.h])
AC_CONFIG_FILES([autoconf.interface])

AC_SUBST(HAVE_PRINTF)
AC_CHECK_FUNCS(printf, [HAVE_PRINTF=1], [HAVE_PRINTF=0])
AC_PROG_CXX
AC_LANG(C++)
AC_SUBST(HAVE_EXCEPTION)
AC_CHECK_HEADERS([exception], [HAVE_EXCEPTION=1], [HAVE_EXCEPTION=0])

AC_OUTPUT
